# rust-advanced-testing-workshop

./: .env  .gitignore  .wr.toml  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md
book/src/00_intro/: 00_welcome.md
book/src/01_better_assertions/: 00_intro.md  01_std_assertions.md  02_googletest.md  03_eq.md  04_options_and_results.md  05_enums.md  06_collections.md  07_custom_matcher.md  08_expect_that.md
book/src/02_snapshots/: 00_intro.md  01_snapshots.md  02_storage_location.md  03_redactions.md  04_outro.md
book/src/03_mocks/: 00_intro.md  01_traits.md  02_mockall.md  03_sequences.md  04_checkpoints.md  05_foreign_traits.md  06_outro.md
book/src/04_interlude/: 00_testing_infrastructure.md
book/src/05_filesystem_isolation/: 00_intro.md  01_named_tempfile.md  02_tempfile.md  03_tempdir.md  04_outro.md
book/src/06_database_isolation/: 00_intro.md  01_sqlx_test.md
book/src/07_http_mocking/: 00_intro.md  01_basics.md  02_match.md  03_checkpoints.md  04_outro.md
book/src/08_macros/: 00_intro.md  01_no_op_macro.md  02_test.md  03_hooks.md  04_outro.md
book/src/09_test_harness/: 00_intro.md  01_harness.md  02_cli.md  03_outro.md
book/src/10_capstone/: 00_capstone.md
ctr/: Cargo.toml
ctr/src/: main.rs
db_launcher/: Cargo.toml
db_launcher/src/: lib.rs  main.rs
exercises/00_intro/00_welcome/: README.md
exercises/01_better_assertions/00_intro/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/01_std_assertions/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/02_googletest/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/03_eq/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/04_options_and_results/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/05_enums/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/06_collections/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/07_custom_matcher/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/08_expect_that/: Cargo.toml  README.md  expectations.yml
exercises/01_better_assertions/09_outro/: Cargo.toml  README.md
exercises/02_snapshots/00_intro/: Cargo.toml  README.md
exercises/02_snapshots/01_snapshots/: Cargo.toml  README.md
exercises/02_snapshots/02_storage_location/: Cargo.toml  README.md
exercises/02_snapshots/03_redactions/: Cargo.toml  README.md  expectations.yml
exercises/02_snapshots/04_outro/: README.md  expectations.yml
exercises/03_mocks/00_intro/: Cargo.toml  README.md
exercises/03_mocks/01_traits/: Cargo.toml  README.md
exercises/03_mocks/02_mockall/: Cargo.toml  README.md  expectations.yml
exercises/03_mocks/03_sequences/: Cargo.toml  README.md  expectations.yml
exercises/03_mocks/04_checkpoints/: Cargo.toml  README.md
exercises/03_mocks/05_foreign_traits/: Cargo.toml  README.md  expectations.yml
exercises/03_mocks/06_outro/: README.md  expectations.yml
exercises/04_interlude/00_testing_infrastructure/: Cargo.toml  README.md  expectations.yml
exercises/05_filesystem_isolation/00_intro/: Cargo.toml  README.md
exercises/05_filesystem_isolation/01_named_tempfile/: Cargo.toml  README.md  expectations.yml
exercises/05_filesystem_isolation/02_tempfile/: Cargo.toml  README.md  expectations.yml
exercises/05_filesystem_isolation/03_tempdir/: Cargo.toml  README.md  expectations.yml
exercises/05_filesystem_isolation/04_outro/: Cargo.toml  README.md
exercises/06_database_isolation/00_intro/: Cargo.toml  README.md
exercises/06_database_isolation/01_sqlx_test/: Cargo.toml  README.md  build.rs  expectations.yml
exercises/07_http_mocking/00_intro/: Cargo.toml  README.md
exercises/07_http_mocking/01_basics/: Cargo.toml  README.md  expectations.yml
exercises/07_http_mocking/01_basics/src/: lib.rs
exercises/07_http_mocking/02_match/: Cargo.toml  README.md  expectations.yml
exercises/07_http_mocking/03_checkpoints/: Cargo.toml  README.md  expectations.yml
exercises/07_http_mocking/04_outro/: Cargo.toml  README.md
exercises/08_macros/00_intro/: Cargo.toml  README.md  expectations.yml
exercises/08_macros/01_no_op_macro/: Cargo.toml  README.md  expectations.yml
exercises/08_macros/02_test/: Cargo.toml  README.md  expectations.yml
exercises/08_macros/03_hooks/: Cargo.toml  README.md  expectations.yml
exercises/08_macros/04_outro/: Cargo.toml  README.md
exercises/09_test_harness/00_intro/: Cargo.toml  README.md
exercises/09_test_harness/01_harness/: Cargo.toml  README.md
exercises/09_test_harness/02_cli/: Cargo.toml  (+2 more)
helpers/: Cargo.toml
helpers/src/: lib.rs
(+61 files in other folders)
