[workspace]
members = [
  "ctr",
  "exercises/*/*",
  "exercises/08_macros/01_no_op_macro/macros01",
  "exercises/08_macros/02_test/macros02",
  "exercises/08_macros/03_hooks/macros03",
]
resolver = "2"

[workspace.dependencies]
googletest = "0.11.0"
insta = "1.34"
libtest-mimic = "0.7.0"
maplit = "1"
mockall = { version = "0.13" }
proc-macro2 = "1.0.76"
quote = "1.0.35"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1.0.111"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
syn = "2"
tempfile = "3.9.0"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6.0"
