[workspace]
members = [
  "ctr",
  "exercises/*/*",
  "exercises/08_macros/01_no_op_macro/macros01",
  "exercises/08_macros/02_test/macros02",
  "exercises/08_macros/03_hooks/macros03",
]
resolver = "2"

[workspace.dependencies]
googletest = "0.13.0"
insta = "1.42"
libtest-mimic = "0.8.1"
maplit = "1"
mockall = { version = "0.13" }
proc-macro2 = "1.0.93"
quote = "1.0.38"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1.0.135"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
syn = "2"
tempfile = "3.15.0"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6.2"
