[workspace]
members = [
  "ctr",
  "exercises/*/*",
  "exercises/08_macros/01_no_op_macro/macros01",
  "exercises/08_macros/02_test/macros02",
  "exercises/08_macros/03_hooks/macros03",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
cargo-manifest = "0.19"
dotenvy = "0.15.7"
fs-err = "3.0.0"
googletest = "0.13.0"
http = "1"
insta = "1.42"
libtest-mimic = "0.8.1"
maplit = "1"
mockall = "0.13"
once_cell = "1.20.2"
owo-colors = "4"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
semver = "1.0.24"
serde = "1"
serde_json = "1.0.135"
serde_yaml = "0.9.34"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
static_assertions = "1.1.0"
syn = "2"
tempfile = "3.15.0"
textwrap = "0.16.1"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
wiremock = "0.6.2"
