[package]
name = "ctr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
fs-err = "2.11.0"
once_cell = "1.19.0"
owo-colors = "3"
pretty_assertions = "1.4.0"
regex = "1.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
textwrap = "0.16.0"
