[package]
name = "ctr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
fs-err = "3.0.0"
once_cell = "1.20.2"
owo-colors = "4"
pretty_assertions = "1.4.1"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
textwrap = "0.16.1"
