[package]
name = "ctr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
textwrap = { workspace = true }
