[package]
name = "wiremock_basics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
